--- a/main.css
+++ b/main.css
@@ -2,13 +2,14 @@ html, body {
     margin: 0;    /* Remove default margin */
     padding: 0;   /* Remove default padding */
     height: 100%; /* Ensure body takes full height */
-    overflow-x: hidden; /* Prevent horizontal overflow */
 }
 
 .main-1 {
     display: flex; /* Align children in a row */
     height: 100vh; /* Full viewport height */
 }
+
+/*----------------------------------- Master layout -----------------------------------*/
 
 .left-rectangle-container {
     display: flex;
@@ -20,33 +21,7 @@ html, body {
     flex: 0 0 auto; /* Prevents it from shrinking and maintains its width */
 }
 
-.logo-and-info {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center; /* Centers text within the paragraphs */
-}
-
-.logo-and-info img {
-    max-width: 100%;
-    max-height: 100%;
-    object-fit: contain;
-}
-
-.p-large {
-    font-size: 36px;
-    font-weight: bold;
-    margin: 5px 0;
-    color: white;
-}
-
-.p-small {
-    font-size: 18px;
-    margin: 20px 0 5px 0;
-    color: lightslategray;
-}
-
-.buttons-container {
+.navigation-buttons {
     width: 100%;
     height: 280px;
     background-color: rgba(0, 0, 0, 0.808);
@@ -60,7 +35,20 @@ html, body {
     gap: 3px; /* Space between grid items */
 }
 
-/*--------------------- Page buttons ---------------------*/
+.remaining-container {
+    position: relative;
+    height: 100%; /* Takes the full height of the parent */
+    flex: 1; /* Allow it to take remaining space */
+    background-color: lightgray;
+    box-sizing: border-box;
+    padding: 20px; /* Padding for inner content */
+
+    display: flex;
+    flex-direction: column;
+}
+
+/*----------------------------------- Buttons -----------------------------------*/
+
 .button {
     display: flex;
     align-items: center;
@@ -73,82 +61,11 @@ html, body {
     position: relative; /* For absolute positioning of the border */
 }
 
-.button::before, .button::after { /* Adding a pseudo-element that's part of the existing button element, but styled in a different way */
-    content: '';
-    position: absolute;
-    left: 0;
-    right: 0;
-    height: 3px; /* Height of the border */
-    background: black; /* Color of the border */
-}
-
-.button::before { /* Top border */ 
-    top: 0; /* Positioning the first pseudo-border on top */
-}
-
-.button::after { /* Bottom border */
-    bottom: 0; /* Positioning the first pseudo-border on bottom */
-}
-
 .button:hover {
     background-color: darkgrey; /* Change background on hover */
 }
-/*--------------------- /Page buttons ---------------------*/
 
-/* Container for the 3 social buttons */
-.social-buttons {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px; /* Adds spacing between buttons */
-    height: 100%; /* Fill the grid cell height */
-}
-
-/*--------------------- Social buttons ---------------------*/
-.social-button {
-    width: 40px;
-    height: 40px;
-    background-color: grey; 
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    text-decoration: none;
-    background-size: contain; /* Scale the image to fit inside */
-    background-position: center; /* Center the image */
-    background-repeat: no-repeat; /* Prevent tiling */
-}
-
-/* Hover effect to change button color */
-.social-button:hover {
-    background-color: darkgrey;
-}
-
-/* Custom styles for each platform icon */
-.social-button.github {
-    background-image: url("./resources/logo.png");
-}
-
-.social-button.linkedin {
-    background-image: url("./resources/logo.png");
-}
-
-.social-button.twitter {
-    background-image: url("./resources/logo.png");
-}
-/*--------------------- /Social buttons ---------------------*/
-
-.remaining-container {
-    position: relative;
-    height: 100%; /* Takes the full height of the parent */
-    flex: 1; /* Allow it to take remaining space */
-    background-color: lightgray;
-    box-sizing: border-box;
-    padding: 20px; /* Padding for inner content */
-
-    display: flex;
-    flex-direction: column;
-}
+/*----------------------------------- Main text -----------------------------------*/
 
 .hello-text {
     font-size: 5em;
@@ -194,7 +111,6 @@ html, body {
     width: 150px; /* Additional space to the sides of the text */
 }
 
-/* Optional: Add a hover effect */
 .pay-button:hover {
     background-color: green; /* Change background to green on hover */
     color: white; /* Change text to white on hover */
