--- a/main.css
+++ b/main.css
@@ -36,14 +36,14 @@ html, body {
     justify-content: center;
 }
 
-.big-P-1 {
+.big-S-1 {
     font-size: 2.5em;
     color: rgb(47, 187, 152);
     user-select: none;
     letter-spacing: -0.6em;
 }
 
-.big-P-2 {
+.big-S-2 {
     font-size: 2.5em;
     color: rgb(180, 45, 45);
     user-select: none;
@@ -160,6 +160,7 @@ html, body {
     min-width: 200px;
     min-height: 100px;
     display: inline-block;
+    line-height: 1.5em;
 }
 
 .name-2,
@@ -168,30 +169,59 @@ html, body {
     white-space: nowrap;
 }
 
-.main-text .big-P-1 {
+.main-text .big-S-1 {
     color: rgb(47, 187, 152);
     letter-spacing: -10em;
     font-family: initial;
-    margin-right: -0.05em;
+    margin-right: -0.1em;
 }
 
-.main-text .big-P-2 {
+.main-text .big-S-2 {
     color: rgb(180, 45, 45);
     font-family: initial;
+    margin-right: -0.185em;
+}
+
+.main-text .big-S-1,
+.main-text .big-S-2 {
+    font-size: 1.6em;
 }
 
 .sub-text {
+    color: rgb(115, 110, 110);
+    font-size: 1.2em;
+    margin-top: 1em;
+    margin-bottom: 3.5em;
+}
+
+.contact-button {
+    padding: 14px 60px;
+    background-color: transparent;
+    color: green;
+    text-decoration: none;
+    border: 2px solid green;
+    border-radius: 5px; /* Rounded corners */
+    font-size: 18px;
+    transition: background-color 0.3s ease, color 0.3s ease; /* Smooth transition for hover effect */
+    width: 150px; /* Additional space to the sides of the text */
+}
+
+.contact-button:hover {
+    background-color: rgb(1, 66, 1);
     color: white;
 }
 
 .uj-logo {
-    width: 30rem;
+    width: 18rem;
     height: auto;
-    visibility: visible;
+    visibility: hidden;
     right: 0;
+    padding: 20px;
+    margin-right: 13em;
+    margin-bottom: 6em;
 }
 
-@media (min-width: 800px) {
+@media (min-width: 1200px) {
     .uj-logo {
         visibility: visible;
     }
