--- a/skills.css
+++ b/skills.css
@@ -160,6 +160,39 @@ html, body {
     justify-content: space-between;
 }
 
+.table-container {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    height: 100%;
+    padding-left: 2em;
+}
+
+.skills-table {
+    width: 80%;
+    border-collapse: collapse;
+    margin: 0 auto;
+    color: black;
+    background-color: white;
+}
+
+.skills-table th, .skills-table td {
+    border: 3px solid black;
+    padding: 8px 12px;
+    text-align: center;
+    font-size: 1em;
+}
+
+.skills-table th {
+    background-color: rgb(47, 187, 152);
+    color: white;
+    font-weight: bold;
+}
+
+.skills-table td {
+    font-size: 0.9em;
+}
+
 /* ----------------------------------- Footer ----------------------------------- */
 .footer {
     background-color: rgb(30, 27, 27);
