Base skills finished. Update content later.

--- a/skills.css
+++ b/skills.css
@@ -162,16 +162,15 @@ html, body {
 
 .table-container {
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
-    height: 100%;
-    padding-left: 2em;
+    gap: 2em;
+    width: 100%;
 }
 
 .skills-table {
-    width: 80%;
+    width: 40%;
     border-collapse: collapse;
-    margin: 0 auto;
     color: black;
     background-color: white;
 }
