--- a/home.css
+++ b/home.css
@@ -247,6 +247,46 @@ html, body {
     margin: 0;
 }
 
+/* ----------------------------------- Modal ----------------------------------- */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+}
+
+/* Modal content */
+.modal-content {
+    background-color: white;
+    padding: 20px;
+    border-radius: 5px;
+    width: 300px;
+    margin: 15% auto;
+    position: relative; /* Position relative to allow positioning of the close button */
+}
+
+/* Close button inside the modal content */
+.close-btn {
+    color: #aaa;
+    font-size: 28px;
+    font-weight: bold;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+}
+
+.close-btn:hover,
+.close-btn:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
 /* ----------------------------------- Media ----------------------------------- */
 @media (min-width: 1200px) {
     .uj-logo {
