Education scrolling update

--- a/education.css
+++ b/education.css
@@ -4,12 +4,13 @@ html, body {
     padding: 0;
     display: flex;
     flex-direction: column;
+    overflow: auto; /* Allow scrolling */
 }
 
 .main-1 {
     flex: 1;
     display: flex;
-    overflow: hidden;
+    overflow: visible;
 }
 
 /* ----------------------------------- Left margin ----------------------------------- */
@@ -19,6 +20,9 @@ html, body {
     grid-template-rows: 1fr 1fr 1fr;
     width: 60px;
     background-color: rgb(30, 27, 27);
+    position: sticky;
+    top: 0;
+    height: 100vh;
 }
 
 .logo-container {
@@ -168,6 +172,7 @@ html, body {
     padding: 0.6em 0;
     font-size: 0.9em;
     width: 100%;
+    z-index: 10;
 }
 
 .footer p {
