--- a/education.css
+++ b/education.css
@@ -167,7 +167,7 @@ html, body {
     display: flex;
     gap: 20px;
     align-items: flex-start;
-    justify-content: center;
+    justify-content: left;
     width: 100%;
     max-width: 1200px;
 }
@@ -184,6 +184,7 @@ html, body {
 .header {
     margin: 0;
     text-align: center;
+    font-size: 3em;
 }
 
 .content {
@@ -192,6 +193,19 @@ html, body {
     flex-direction: column;
     justify-content: flex-start;
     margin-top: 10px;
+    text-align: left;
+}
+
+ul {
+    padding-left: 20px;
+    margin: 0;
+    list-style-position: outside;
+}
+
+li {
+    margin: 0;
+    padding: 0;
+    font-size: 1.3em;
 }
 
 /* ----------------------------------- Footer ----------------------------------- */
