--- a/home.css
+++ b/home.css
@@ -9,7 +9,7 @@ html, body {
 .main-1 {
     flex: 1;
     display: flex;
-    overflow: hidden;
+    overflow: visible;
 }
 
 /* ----------------------------------- Left margin ----------------------------------- */
