--- a/education.css
+++ b/education.css
@@ -18,10 +18,12 @@ html, body {
     display: grid;
     grid-template-rows: 1fr 1fr 1fr;
     width: 60px;
+    height: 100%;
     background-color: rgb(30, 27, 27);
-    position: sticky;
-    top: 0;
-    height: 100vh;
+    position: fixed; /* Position it absolutely */
+    z-index: 10; /* Higher than the footer to ensure it overlaps */
+    top: 0; /* Align it to the top of the viewport */
+    bottom: 0; /* Stretch it to the bottom */
 }
 
 .logo-container {
@@ -124,6 +126,7 @@ html, body {
     display: flex;
     flex-direction: column-reverse;
     gap: 5px;
+    margin-bottom: 20px;
 }
 
 .small-button-with-image {
@@ -222,7 +225,8 @@ li {
     padding: 0.6em 0;
     font-size: 0.9em;
     width: 100%;
-    z-index: 10;
+    position: relative;
+    z-index: 5; /* Lower than left-margin */
 }
 
 .footer p {
