--- a/home.css
+++ b/home.css
@@ -18,7 +18,12 @@ html, body {
     display: grid;
     grid-template-rows: 1fr 1fr 1fr;
     width: 60px;
+    height: 100%;
     background-color: rgb(30, 27, 27);
+    position: fixed; /* Position it absolutely */
+    z-index: 10; /* Higher than the footer to ensure it overlaps */
+    top: 0; /* Align it to the top of the viewport */
+    bottom: 0; /* Stretch it to the bottom */
 }
 
 .logo-container {
@@ -121,6 +126,7 @@ html, body {
     display: flex;
     flex-direction: column-reverse;
     gap: 5px;
+    margin-bottom: 20px;
 }
 
 .small-button-with-image {
@@ -241,6 +247,8 @@ html, body {
     padding: 0.6em 0;
     font-size: 0.9em;
     width: 100%;
+    position: relative;
+    z-index: 5; /* Lower than left-margin */
 }
 
 .footer p {
