--- a/projects.css
+++ b/projects.css
@@ -4,6 +4,7 @@ html, body {
     padding: 0;
     display: flex;
     flex-direction: column;
+    overflow: auto; /* Allow scrolling */
 }
 
 .main-1 {
@@ -18,12 +19,10 @@ html, body {
     display: grid;
     grid-template-rows: 1fr 1fr 1fr;
     width: 60px;
-    height: 100%;
     background-color: rgb(30, 27, 27);
-    position: fixed; /* Position it absolutely */
-    z-index: 10; /* Higher than the footer to ensure it overlaps */
-    top: 0; /* Align it to the top of the viewport */
-    bottom: 0; /* Stretch it to the bottom */
+    position: sticky;
+    top: 0;
+    height: 100vh;
 }
 
 .logo-container {
@@ -126,7 +125,6 @@ html, body {
     display: flex;
     flex-direction: column-reverse;
     gap: 5px;
-    margin-bottom: 20px;
 }
 
 .small-button-with-image {
@@ -208,8 +206,7 @@ html, body {
     padding: 0.6em 0;
     font-size: 0.9em;
     width: 100%;
-    position: relative;
-    z-index: 5; /* Lower than left-margin */
+    z-index: 10;
 }
 
 .footer p {
