--- a/education.css
+++ b/education.css
@@ -185,6 +185,7 @@ html, body {
     margin: 0;
     text-align: center;
     font-size: 3em;
+    color: rgb(137, 129, 131);
 }
 
 .content {
@@ -194,6 +195,10 @@ html, body {
     justify-content: flex-start;
     margin-top: 10px;
     text-align: left;
+}
+
+.content h1{
+    color: rgb(0, 0, 0);
 }
 
 ul {
